-Sign up -Login improvements -Typescript models

--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -29,12 +29,12 @@
                     <div class="login-wrap p-4 p-md-5">
                   <div class="d-flex">
                       <div class="w-100">
-                          <h3 class="mb-4">Ingresar</h3>
+                          <h3 class="mb-4">{{loginViewLabels.loginTitle}}</h3>
                       </div>
                       <div class="w-100">
                         <p class="social-media d-flex justify-content-end">
                             <a href="javascript: void(0);" class="btn btn-success rounded submit px-3" (click)="selectLanguage('ES')" class="social-icon d-flex align-items-center justify-content-center">ES</a>
-                            <a  href="javascript: void(0);"  (click)="selectLanguage('EN')" class="social-icon d-flex align-items-center justify-content-center">EN</a>
+                            <a href="javascript: void(0);"  (click)="selectLanguage('EN')" class="social-icon d-flex align-items-center justify-content-center">EN</a>
                         </p>
                     </div>
                            
@@ -51,7 +51,13 @@
                 </div>
                 <div class="form-group">
                     <!-- <button class="btn btn-primary"></button> -->
-                    <button  (click)="login()" style="width: 100%;background-color: #007bff;color: white;" class="btn btn-success rounded submit px-3">{{loginViewLabels.loginButton}}</button>
+                   
+                    <div *ngIf="processing" class="d-flex justify-content-center">
+                        <div  class="spinner-border text-primary" role="status">
+                          <span class="sr-only">Loading...</span>
+                        </div>
+                      </div>
+                    <button *ngIf="!processing"  (click)="login()" style="width: 100%;background-color: #007bff;color: white;" class="btn btn-success rounded submit px-3">{{loginViewLabels.loginButton}}</button>
                 </div>
                 <div class="form-group d-md-flex">
                     <!-- <div class="w-50 text-left">
@@ -65,7 +71,8 @@
                                 </div> -->
                 </div>
               </form>
-              <p class="text-center">{{loginViewLabels.hasAccount}} <a data-toggle="tab" href="#signup">{{loginViewLabels.register}}</a></p>
+              <p *ngIf="errorLabel" class="text-center" style="font-size: small; color: darkorange;"><strong>{{errorLabel}}</strong></p>
+              <p class="text-center">{{loginViewLabels.hasAccount}} <a data-toggle="tab" href="javascript: void(0);" (click)="goToSingUp()">{{loginViewLabels.register}}</a></p>
             </div>
           </div>
             </div>
