--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -65,6 +65,7 @@
                           <span class="sr-only">Loading...</span>
                         </div>
                       </div>
+                      <p *ngIf="errorLabel" class="text-center" style="font-size: small; color: darkorange;"><strong>{{errorLabel}}</strong></p>
                     <button  *ngIf="!processing" (click)="register()"  style="width: 100%;background-color: #007bff;color: white;" class="btn btn-success rounded submit px-3">{{registerViewLabels.registerButton}}</button>
                 </div>
                 <div class="form-group d-md-flex">
