--- a/src/app/pages/sales/clients/clients.component.html
+++ b/src/app/pages/sales/clients/clients.component.html
@@ -139,12 +139,12 @@
               <p style="font-size: medium;">Una vez llena la plantilla, cargala para iniciar la importación</p>
               <input type="file" (change)="uploadListener($event)" accept=".csv">
               <p>Clientes a cargar {{newClients.length}}</p>
-              <div *ngIf="newClients.length > 0" class="table-responsive"> 
+              <a *ngIf="newClients.length > 0" href="javascript:void(0)" (click)="setConfirmationTableVisible()">Quiero ver el detalle</a>
+              <div *ngIf="newClients.length > 0 && isVisibleTableSet" class="table-responsive"> 
                 <table class="table table-hover">
                     <thead style="background-color: #007bff; color:white; font-size: small;">
                       <tr>
                         <th>Razón social</th>
-                        <th>Contacto</th>
                         <th>RFC</th>
                         <th>Correo</th>
                       </tr>
@@ -152,13 +152,19 @@
                     <tbody>
                       <tr style="font-size: small;" *ngFor="let c of newClients; index as i;">
                         <td>{{c.legalName}}</td>
-                        <td>{{c.contactName}}</td>
                         <td>{{c.fiscalTaxID}}</td>
                         <td>{{c.email}}</td>
                       </tr>
                     </tbody>
                 </table>
-               <button  (click)="importFile()" class="btn btn-warning" style="text-align: center;">Importar</button>
+              </div>
+              <div>
+                <button *ngIf="!processing && newClients.length > 0" (click)="importFile()" class="btn btn-warning" style="text-align: center;">Importar</button>
+              </div> 
+              <div *ngIf="processing" class="d-flex justify-content-center">
+                <div  class="spinner-border text-primary" role="status">
+                  <span class="sr-only">Loading...</span>
+                </div>
                </div>
             </form>
         </div>
