--- a/src/app/pages/sales/clients/clients.component.html
+++ b/src/app/pages/sales/clients/clients.component.html
@@ -44,13 +44,30 @@
  
 </div>
 
-<nav aria-label="Page navigation example">
-  <ul class="pagination justify-content-end">
-    <li *ngIf="currentPage != 0" class="page-item"><a class="page-link" href="javascript:void(0)" (click)="previousPage()">Atrás</a></li>
-    <li *ngFor="let p of pageLinks" class="page-item"><a class="page-link" href="javascript:void(0)" (click)="goToPage(p)">{{p +1}}</a></li>
-    <li *ngIf="currentPage != totalPages -1" class="page-item"><a class="page-link" href="javascript:void(0)" (click)="nextPage()">Siguiente</a></li>
-  </ul>
-</nav>
+<div class="row">
+
+  <div class="col-sm-6">
+    <!-- <h5>Página {{currentPage + 1}} de {{totalPages}}</h5> -->
+    <p style="font-size: small;">Elementos por página: </p>
+    <!-- https://stackoverflow.com/questions/37968712/angular-2-setting-selected-value-on-dropdown-list -->
+    <select [(ngModel)]="selectedItemPerPageOption" (change)="manageItemsPerPage($event)">
+      <option *ngFor="let x of itemsPerPageOptionValue" [ngValue]="x" >{{x.text}}</option>
+  </select>
+  <!-- <select [(ngModel)]="selectedItemPerPageOption.value" (change)="manageItemsPerPage($event)">
+    <option *ngFor="let x of itemsPerPageOptionValue" [ngValue]="x.value" >{{x.text}}</option>
+</select> -->
+ </div>
+ <div class="col-sm-6">
+  <nav aria-label="Page navigation example">
+    <ul class="pagination justify-content-end">
+      <li *ngIf="currentPage != 0" class="page-item"><a class="page-link" href="javascript:void(0)" (click)="previousPage()">Atrás</a></li>
+      <li *ngFor="let p of viewPageLinks" class="page-item"><a class="page-link" href="javascript:void(0)" (click)="goToPage(p)">{{p +1}}</a></li>
+      <li *ngIf="currentPage != totalPages -1" class="page-item"><a class="page-link" href="javascript:void(0)" (click)="nextPage()">Siguiente</a></li>
+    </ul>
+  </nav>
+</div>
+</div>
+
 
  <ng-template #content let-modal>
   <div class="modal-header">
