sales index concepts

--- a/src/app/pages/sales/sales-index/sales-index.component.html
+++ b/src/app/pages/sales/sales-index/sales-index.component.html
@@ -26,7 +26,7 @@
         <div class="card" style="width: 18rem;">
             <!-- <img class="card-img-top" src="..." alt="Card image cap"> -->
             <div class="card-header">
-                <i class="fa fa-shopping-cart"></i> Captura de venta
+                <i class="fa fa-wrench"></i> Servicios
             </div>
             <div class="card-body">
             <a href="#" class="btn btn-primary">Ver</a>
