--- a/src/app/pages/sales/sales-index/sales-index.component.html
+++ b/src/app/pages/sales/sales-index/sales-index.component.html
@@ -18,7 +18,7 @@
                 <i class="fa fa-tags"></i> Productos
             </div>
             <div class="card-body">
-            <a href="#" class="btn btn-primary">Ver</a>
+                <button  (click)="goToProducts()" class="btn btn-primary">Ver</button>
             </div>
         </div>
     </div>
