Load batch files xml expenses

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,23 @@
-<p>home works!</p>
+
+<div style="text-align: center;">
+
+    <h4>¡Bienvenido!</h4>
+    <h5>¿Qué quieres hacer?</h5>
+    <br>
+
+    <div class="row">
+        <div class="col-sm-12">
+            <div class="card">
+                <!-- <img class="card-img-top" src="..." alt="Card image cap"> -->
+                <div class="card-header">
+                    <i class="fa fa-credit-card"></i> Subir gasto (CFDI)
+                </div>
+                <div class="card-body">
+                <button  (click)="goToLoadExpenseCFDI()" class="btn btn-primary">Ir</button>
+                </div>
+            </div>
+        </div>
+       
+    </div>
+
+</div>
