--- a/src/app/pages/purchases/Expenses/expense-list/expense-list.component.html
+++ b/src/app/pages/purchases/Expenses/expense-list/expense-list.component.html
@@ -14,6 +14,8 @@
     </div>
   </div>
   
+  <div class="row">
+  <div class="col-sm-12">
   <p>
     <button type="button" class="btn btn-outline-primary" (click)="collapse.toggle()" [attr.aria-expanded]="!isCollapsed"
       aria-controls="collapseExample">
@@ -55,13 +57,13 @@
       </div>
     </div>
   </div>
+</div>
+</div>
   
  <!-- Button triggers collapse -->
-
-
-
   <br />
   <div class="row">
+
     <div class="table-responsive"> 
       <table class="table table-hover">
           <thead style="background-color: #007bff; color:white; font-size: small;">
