--- a/src/app/pages/purchases/Expenses/expense-list/expense-list.component.html
+++ b/src/app/pages/purchases/Expenses/expense-list/expense-list.component.html
@@ -29,18 +29,19 @@
           <div class="input-group-prepend">
             <span class="input-group-text" id="basic-addon1">Palabra clave</span>
           </div>
-          <input type="text" class="form-control" placeholder="Proveedor, RFC " aria-label="Username" aria-describedby="basic-addon1">
+          <input type="text" class="form-control" [(ngModel)]="searchTerm" name ="searchTerm" placeholder="Proveedor, RFC " aria-label="Username" aria-describedby="basic-addon1">
         </div>
         <label>Fecha de Expedición</label>
         <div class="input-group mb-3">
           <div class="input-group-prepend">
             <span class="input-group-text" id="basic-addon1">Inicio</span>
           </div>
-          <input type="date" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1">
+          <!-- <input type="date" class="form-control" [(ngModel)]="emissionStartDate" name="emissionStartDate"  aria-describedby="basic-addon1"> -->
+          <input type="date" class="form-control" [ngModel] ="emissionStartDate | date:'yyyy-MM-dd'" (ngModelChange)="emissionStartDate = $event">
           <div class="input-group-prepend">
             <span class="input-group-text" id="basic-addon1">Fin</span>
           </div>
-          <input type="date" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1">
+          <input type="date" class="form-control" [ngModel]="emissionEndDate| date:'yyyy-MM-dd'"  (ngModelChange)="emissionStartDate = $event" name="emissionEndDate"  aria-describedby="basic-addon1">
         </div>
        
         <label>Fecha de Carga</label>
@@ -53,6 +54,15 @@
             <span class="input-group-text" id="basic-addon1">Fin</span>
           </div>
           <input type="date" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1">
+        </div>
+
+
+        <div class="row">
+          <div class="col-sm-12">
+              <div class="pull-right">
+                <button type="button" class="btn btn-primary" (click)="resetSearch()">Buscar</button>
+              </div>
+          </div>
         </div>
       </div>
     </div>
@@ -76,6 +86,7 @@
               <th>Subtotal</th>
               <th>Total</th>
               <th></th>
+              <th></th>
             </tr>
           </thead>
           <tbody>
@@ -87,6 +98,7 @@
               <td>{{e.taxes | currency}}</td>
               <td>{{e.subtotal | currency}}</td>
               <td>{{e.total | currency}}</td>
+              <td><i class="fa fa-info" (click)="openInfo(contentInfo, i)"  aria-hidden="true" style="font-size:17px;"></i></td>
               <th><i class="fa fa-ban" (click)="openDelete(contentDelete, i)"  aria-hidden="true" style="font-size:17px;"></i></th>
             </tr>
             <tr style="font-size: small;">
@@ -97,6 +109,7 @@
                 <td></td>
                 <td>{{expensesData.subtotal | currency}}</td>
                 <td>{{expensesData.total | currency}}</td>
+                <th></th>
                 <th></th>
               </tr>
           </tbody>
@@ -161,10 +174,25 @@
     </div>
   </ng-template>
   
+  <ng-template #contentInfo let-modal>
+    <div class="modal-header">
+      <h5 class="modal-title" id="modal-basic-title">Proveedor {{selectedExpenses.supplierName}}</h5>
+      <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
+    <div class="modal-body">
+          <app-load [expense]="selectedExpenses"></app-load>
+    </div>
+    <div class="modal-footer">
+      <button type="button" class="btn btn-outline-dark" (click)="modal.close('Save click')">OK</button>
+    </div>
+  </ng-template>
+
   <ng-template #contentUploadCFDI let-modal>
     <div class="modal-header">
       <h4 class="modal-title" id="modal-basic-title">Carga de CFDI</h4>
-      <button type="button" class="close" aria-label="Close" (click)="resetSearch()">
+      <button type="button" class="close" aria-label="Close" (click)="refreshAfterLoad()">
         <span aria-hidden="true">&times;</span>
       </button>
     </div>
@@ -172,7 +200,7 @@
        <app-load></app-load>
     </div>
     <div class="modal-footer">
-      <button type="button" class="btn btn-outline-dark" (click)="resetSearch()">OK</button>
+      <button type="button" class="btn btn-outline-dark" (click)="refreshAfterLoad()">OK</button>
     </div>
   </ng-template>
   
