Delete all expenses

--- a/src/app/pages/purchases/Expenses/load/load.component.html
+++ b/src/app/pages/purchases/Expenses/load/load.component.html
@@ -31,6 +31,7 @@
               <h3>Proveedor: {{ed.supplierName}}</h3>
               <h5>RFC: {{ed.supplierTaxID}}</h5>
               <h5>Fecha: {{ed.expenseDate}}</h5>
+              <h5>Folio fiscal: {{ed.uuid}}</h5>
 
               <div class="container">
               <div class="table-responsive">
