--- a/src/app/pages/purchases/Expenses/expense-list/expense-list.component.html
+++ b/src/app/pages/purchases/Expenses/expense-list/expense-list.component.html
@@ -7,6 +7,7 @@
     </div>
     <div class="col-sm-6">
       <button class="btn btn-primary pull-right" (click)="openBatchLoad(contentUploadCFDI)" style="margin-left: 10px;">Cargar CFDI</button>
+      <button class="btn btn-danger pull-right" (click)="openDeleteAll(contentDeleteAll)" style="margin-left: 10px;">Borrar todo</button>
       <!-- <button *ngIf="!downloadProcessing" class="btn btn-success pull-right" (click)="getClientsForDownload()">Descargar</button>
       <div *ngIf="downloadProcessing"  class="spinner-border text-primary pull-right" role="status">
         <span class="sr-only">Loading...</span>
@@ -154,7 +155,7 @@
   
   <ng-template #contentDelete let-modal>
     <div class="modal-header">
-      <h4 class="modal-title" id="modal-basic-title">Cliente # {{selectedClient.number}}</h4>
+      <h4 class="modal-title" id="modal-basic-title">Proveedor {{selectedExpenses.supplierName}}</h4>
       <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
         <span aria-hidden="true">&times;</span>
       </button>
@@ -163,10 +164,18 @@
         <div class="row">
           <div class="col-sm-12 mx-auto">
               <form>
-                <p style="font-size: small; font-weight: bold;">¿Estás seguro que quieres eliminar éste cliente? Presiona OK para eliminarlo</p>
-                 
+                <p style="font-size: small; font-weight: bold;">¿Estás seguro que quieres eliminar éste gasto?
+                   (Total: {{selectedExpenses.total | currency }}). Presiona Borrar para eliminarlo</p>
               </form>
+
+             
           </div>
+
+          <div class="col text-center">
+            <div>
+              <button type="button" class="btn btn-danger" (click)="confimDeleteExpenses()">Borrar</button>
+            </div>
+        </div>
       </div>
     </div>
     <div class="modal-footer">
@@ -174,6 +183,46 @@
     </div>
   </ng-template>
   
+  <ng-template #contentDeleteAll let-modal>
+    <div class="modal-header">
+      <h4 class="modal-title" id="modal-basic-title">Confirmación de seguridad</h4>
+      <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
+    <div class="modal-body">
+        <div class="row">
+          <div class="col-sm-12 mx-auto">
+              <form>
+                <p style="font-size: small; font-weight: bold;">¿Estás seguro que quieres elimminar todos los gastos?, introduce tu contraseña y presiona borrar</p>
+               
+              </form>
+          </div>
+          <br>
+          <div class="col-sm-12 mx-auto">
+            <label>
+              Contraseña
+            </label>
+            <input type="password" [(ngModel)]="passwordToDelete" name="passwordToDelete" class="form-control">
+         </div>
+      </div>
+
+      <br>
+      <div class="row">
+        <div class="col-sm-12 mx-auto">
+         </div>
+         <div class="col text-center">
+          <div>
+            <button type="button" class="btn btn-danger" (click)="confimDeleteAll()">Borrar</button>
+          </div>
+      </div>
+      </div>
+    </div>
+  <div class="modal-footer">
+      <button type="button" class="btn btn-outline-dark" (click)="modal.close('Save click')">OK</button>
+    </div>
+  </ng-template>
+
   <ng-template #contentInfo let-modal>
     <div class="modal-header">
       <h5 class="modal-title" id="modal-basic-title">Proveedor {{selectedExpenses.supplierName}}</h5>
