--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,7 +19,7 @@
   .sidebar a {
     padding: 8px 8px 8px 32px;
     text-decoration: none;
-    font-size: 25px;
+    font-size: 19px;
     color: #f1f1f1;
     display: block;
     transition: 0.3s;
@@ -27,6 +27,14 @@
   
   .sidebar a:hover {
     color: #f1f1f1;
+    font-weight: bold;
+    
+  }
+
+  .sidebar a:focus{
+    color: #f1f1f1;
+    font-weight: bold;
+
   }
   
   .sidebar .closebtn {
@@ -40,8 +48,8 @@
   .openbtn {
     font-size: 20px;
     cursor: pointer;
-    background-color: rgb(153, 210, 212);
-    color: white;
+    background-color: rgb(78, 112, 221);
+    color: rgb(255, 255, 255);
     padding: 10px 15px;
     border: none;
   }
@@ -66,10 +74,10 @@
 
     <div id="mySidebar" class="sidebar">
       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
+      <div class="container">
+      <h3 style="color: antiquewhite;">Open ERP</h3>
+      </div>
       <a *ngFor="let link of links" class="nav-item" [routerLink]="link.path" [routerLinkActive]="['link-active']" >{{link.text}}</a>
-      <a href="#">Services</a>
-      <a href="#">Clients</a>
-      <a href="#">Contact</a>
     </div>
     
     <div id="main">
@@ -86,7 +94,7 @@
                     (click)="toggle()">
               <span class="navbar-toggler-icon"></span>
             </button> -->
-            <button class="openbtn" onclick="openNav()" style="margin-right: 10px;">☰ </button>  
+            <button class="openbtn" onclick="manageNav()" style="margin-right: 10px;">☰ </button>  
             
             <a class="navbar-brand" [routerLink]="['/']"> <i class="fa fa-user"></i> {{authService.getUserData().userName}}</a>
       
